public interface Connectable {

    //metodos
    void turnOn();
    void turnOff();
    boolean isOn();
}
